--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,9 @@ qualiteca/test.ipynb
 
 .vscode/
 
+
+biblioteca.db
+
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
